--- a/Pages/chars/charList.html
+++ b/Pages/chars/charList.html
@@ -17,7 +17,7 @@ height: 0.3rem !important;
 <div class="container">
 <header class="char-header">
 <h1>▋ 캐릭터 정보</h1>
-<p class="char-subtitle">총 인원: {{? 1+{{array_length::chars}}}} 명 (소지 포인트: {{getvar::gold}} pts.)</p>
+<p class="char-subtitle">총 인원: {{? 1+{{array_length::chars}}}} 명 (소지 포인트: {{getvar::spirit}} pts.)</p>
 </header>
 
 <div class="tabs-container">
