--- a/Pages/main/main.html
+++ b/Pages/main/main.html
@@ -36,7 +36,7 @@
 <h1>메인 메뉴</h1>
 <div class="game-info">
 <span>Day {{getvar::day}} {{#when::{{? {{? {{floor{{getvar::day}}%29.5}}}} == 15}}}}<span style="color:#fbc02d">《만월》</span>{{/when}} {{#when::ampm::vis::0}}☀️ 낮{{:else}}🌙 밤{{/when}}</span>
-<span>{{getvar::gold}} G</span>
+<span>{{getvar::spirit}} Spirit</span>
 </div>
 </header>
 
