--- a/Pages/congif/config.html
+++ b/Pages/congif/config.html
@@ -11,23 +11,69 @@ h2 {
     color:#888
 }
 
+.text-input {
+width: 100%;
+background-color: #2a2a2a;
+border: 1px solid #555;
+color: #e0e0e0;
+padding: 0.5rem 0.75rem;
+border-radius: 4px;
+font-size: 1em;
+font-family: inherit;
+}
+
+.text-input:focus {
+outline: none;
+border-color: #888;
+}
 </style>
+
 <div class="container">
 <div class="line double"></div>
 
 <header class="header">
-<h1>게임 설정</h1>
+<h1>▋ 게임 설정</h1>
 </header>
 
 <main>
 
 <div class="tabs-container">
+{{#when::__oldScreen::vis::"gameStart"}}
+<div class="tabs {{#if {{equal::{{getvar::category}}::user}}}}active{{/if}}" risu-btn="user">▋마왕</div>
+<div class="tabs {{#if {{equal::{{getvar::category}}::king}}}}active{{/if}}" risu-btn="king">▋광왕</div>
+{{/when}}
 <div class="tabs {{#if {{equal::{{getvar::category}}::play}}}}active{{/if}}" risu-btn="play">▋플레이</div>
 <div class="tabs {{#if {{equal::{{getvar::category}}::system}}}}active{{/if}}" risu-btn="system">▋시스템</div>
 </div>
 
 <div class="tab-content">
 <div class="info-grid">
+{{#when::category::vis::user}}
+<div style="grid-column: 1 / -1;"><h2>▷ 기본 정보</h2></div>
+<div class='btn command-btn' risu-btn='userGender'><strong>성별: </strong>{{dict_element::{{getvar::user}}::성별}}</div>
+<div class='btn command-btn' risu-btn='userAge'><strong>외형: </strong>{{dict_element::{{getvar::user}}::외형}}</div>
+<div class="line double" style="grid-column: 1 / -1;"></div>
+<div style="grid-column: 1 / -1;"><h2>▷ 신체 정보</h2></div>
+{{#if {{notequal::{{dict_element::{{getvar::user}}::성별}}::남성}}}}<div class='btn command-btn' risu-btn='userBreast'><strong>가슴: </strong>{{dict_element::{{getvar::user}}::가슴}}</div>{{/if}}
+{{#if {{notequal::{{dict_element::{{getvar::user}}::성별}}::남성}}}}<div class='btn command-btn' risu-btn='userTit'><strong>유두: </strong>{{dict_element::{{getvar::user}}::유두}}</div>{{/if}}
+<div class='btn command-btn' risu-btn='userPubes'><strong>음모: </strong>{{dict_element::{{getvar::user}}::음모}}</div>
+{{#if {{notequal::{{dict_element::{{getvar::user}}::성별}}::여성}}}}<div class='btn command-btn' risu-btn='userPenis'><strong>페니스: </strong>{{dict_element::{{getvar::user}}::페니스}}</div>{{/if}}
+<div class='btn command-btn two-cells' risu-btn='userHair'><strong>헤어스타일: </strong>{{dict_element::{{getvar::user}}::헤어스타일}}</div>
+{{/when}}
+
+{{#when::category::vis::king}}
+<div style="grid-column: 1 / -1;"><h2>▷ 기본 정보</h2></div>
+<div class='btn command-btn' risu-btn='kingGender'><strong>성별: </strong>{{dict_element::{{getvar::king}}::성별}}</div>
+<div class='btn command-btn' risu-btn='kingAge'><strong>외형: </strong>{{dict_element::{{getvar::king}}::외형}}</div>
+<div class="line double" style="grid-column: 1 / -1;"></div>
+<div style="grid-column: 1 / -1;"><h2>▷ 신체 정보</h2></div>
+{{#if {{notequal::{{dict_element::{{getvar::king}}::성별}}::남성}}}}<div class='btn command-btn' risu-btn='kingBreast'><strong>가슴: </strong>{{dict_element::{{getvar::king}}::가슴}}</div>{{/if}}
+{{#if {{notequal::{{dict_element::{{getvar::king}}::성별}}::남성}}}}<div class='btn command-btn' risu-btn='kingTit'><strong>유두: </strong>{{dict_element::{{getvar::king}}::유두}}</div>{{/if}}
+<div class='btn command-btn' risu-btn='kingPubes'><strong>음모: </strong>{{dict_element::{{getvar::king}}::음모}}</div>
+{{#if {{notequal::{{dict_element::{{getvar::king}}::성별}}::여성}}}}<div class='btn command-btn' risu-btn='kingPenis'><strong>페니스: </strong>{{dict_element::{{getvar::king}}::페니스}}</div>{{/if}}
+<div class='btn command-btn two-cells' risu-btn='kingHair'><strong>헤어스타일: </strong>{{dict_element::{{getvar::king}}::헤어스타일}}</div>
+{{/when}}
+
 {{#when::category::vis::play}}
 <div style="grid-column: 1 / -1;"><h2>▷ 일반 설정</h2></div>
 <div class='two-cells' risu-btn='ageLimit'>
@@ -273,9 +319,11 @@ h2 {
 
 {{/when}}
 
+
 </div>
 </div>
 </main>
 
 <div class="line double"></div>
-{{getvar::cmds}}
+{{getVar::cmds}}
+</div>
