--- a/Pages/Shop/shop.html
+++ b/Pages/Shop/shop.html
@@ -260,7 +260,7 @@ box-shadow: 0px 0px 20px -2px #a00606;
 <header class="header">
 <h1>마계 상점</h1>
 <div class="game-info">
-<span>(소지한 영혼: {{getvar::spirit}} spirit)</span>
+<span>(소지한 영혼: {{getvar::spirit}} Spirit)</span>
 </div>
 </header>
 
