--- a/Pages/train/train.html
+++ b/Pages/train/train.html
@@ -587,5 +587,5 @@ S쾌락은 일단 숨겨두기
 </main>
 
 <div class="line double"></div>
-<div class="btn command-btn" risu-btn="199">조교종료</div>
+<div class="btn command-btn" risu-btn="199">[199] 조교종료</div>
 </div>
