--- a/Pages/train/ablUp.html
+++ b/Pages/train/ablUp.html
@@ -122,13 +122,15 @@ box-shadow: 0px 0px 20px -2px #a00606;
 </div>
 </section>
 <div class="line single"></div>
-<section class="log-panel">
+{{#when::__oldScreen::vis::"train"}}
+<section class="trace-panel">
 <h2>* 흔적 변화</h2>
-<div class="log-content">
+<div class="trace-content">
 {{getvar::traceText}}
 {{#when::traceText::vis::}}변화없음{{/when}}
 </div>
 </section>
 <div class="line single"></div>
+{{/when}}
 <div>{{getVar::cmds}}</div>
 </div>
