디버그 툴에 spirit변경 기능 추가

--- a/Pages/main/cheat.html
+++ b/Pages/main/cheat.html
@@ -1,3 +1,17 @@
+<div class="container">
+<header class="header">
+<h1>디버그 툴</h1>
+<div class="game-info">
+<span>현재 Spirit: {{getvar::spirit}}</span>
+</div>
+</header>
+
+<main>
+<section class="command-panel">
+<span class="section-label">디버그 명령</span>
 <div class="command-container">
 {{getvar::cmds}}
+</div>
+</section>
+</main>
 </div>
